syntax = "proto3";

import "media_endpoint_log.proto";

package atm0s;
